--- a/QLTBSaoDo.Data/QLTBSaoDo.Data.csproj
+++ b/QLTBSaoDo.Data/QLTBSaoDo.Data.csproj
@@ -5,11 +5,26 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20201026035711_Initial.cs" />
+    <Compile Remove="Migrations\20201026035711_Initial.Designer.cs" />
+    <Compile Remove="Migrations\20201026040543_Initial.cs" />
+    <Compile Remove="Migrations\20201026040543_Initial.Designer.cs" />
+    <Compile Remove="Migrations\20201026041436_Initial.cs" />
+    <Compile Remove="Migrations\20201026041436_Initial.Designer.cs" />
+    <Compile Remove="Migrations\20201026041926_Initial.cs" />
+    <Compile Remove="Migrations\20201026041926_Initial.Designer.cs" />
+    <Compile Remove="Migrations\20201026042230_Initial.cs" />
+    <Compile Remove="Migrations\20201026042230_Initial.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.9">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="3.1.6" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="3.1.6" />
   </ItemGroup>
 
 </Project>
