--- a/QLTBSaoDo.BackendApi/QLTBSaoDo.BackendApi.csproj
+++ b/QLTBSaoDo.BackendApi/QLTBSaoDo.BackendApi.csproj
@@ -1,16 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\QLTBSaoDo.Application\QLTBSaoDo.Application.csproj" />
     <ProjectReference Include="..\QLTBSaoDo.Data\QLTBSaoDo.Data.csproj" />
-    <ProjectReference Include="..\QLTBSaoDo.ViewModels\QLTBSaoDo.ViewModels.csproj" />
   </ItemGroup>
 
 </Project>
