--- a/QLTBSaoDo.Data/appsettings.json
+++ b/QLTBSaoDo.Data/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "QLTBDatabase": "Server=.;Database=QLTBDatabase;Trusted_Connection=True;"
+    "QLTBDatabase": "Server=.;Database=QLTBDatabase;Trusted_Connection=True"
   }
 }
