fix connectionString problem

--- a/QLTBSaoDo.BackendApi/appsettings.json
+++ b/QLTBSaoDo.BackendApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "QLTBDatabase": "Server=.;Database=QLTBDatabase;Trusted_Connection=True;"
+    "QLTBDatabase": "Server=.;Database=QLTBDatabase;User ID=sa; Password=sa;"
   },
   "Logging": {
     "LogLevel": {
